--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           while(index < streams.home.length){
             var tweet = streams.home[index];
             var $tweet = $('<div></div>');
-            $tweet.text('@' + tweet.user + ': ' + tweet.message);
+            $tweet.text('@' + tweet.user + ': ' + tweet.message + ' ' + tweet.created_at);
             $tweet.prependTo($body);
             index += 1;
           }
