--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
+    <h1>Twittler</h1>
+    <section class="tweets"></section>
     <script>
 
       $(document).ready(function(){
-        var $body = $('body');
-        $body.html('');
 
         var formatTimestamp = function(date) {
 
@@ -50,7 +50,7 @@
             var tweet = streams.home[index];
             var $tweet = $('<div></div>');
             $tweet.text('@' + tweet.user + ': ' + tweet.message + ' ' + formatTimestamp(tweet.created_at));
-            $tweet.prependTo($body);
+            $tweet.prependTo($('.tweets'));
             index += 1;
           }
         };
