--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <h1>Twittler</h1>
+    <h1 class="logo">Twittler</h1>
     <section class="tweets"></section>
     <script>
 
