Changed formatting of displayed tweets to display user and timestamp on first line and tweet on a second line

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
         var displayTweets = function() {
           while(index < streams.home.length){
             var tweet = streams.home[index];
-            var $tweet = $('<div></div>');
-            $tweet.text('@' + tweet.user + ': ' + tweet.message + ' ' + formatTimestamp(tweet.created_at));
+            var $tweet = $('<div>@' + tweet.user + ' ' + formatTimestamp(tweet.created_at) + '<br/>' + tweet.message + '</div>');
             $tweet.prependTo($('.tweets'));
             index += 1;
           }
