--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1 class="logo">Twittler</h1>
 
-    <div class="refresh">Refresh Tweets</div>
+    <div class="refresh row">Refresh Tweets</div>
 
     <section class="tweets">
     </section>
@@ -53,7 +53,8 @@
         var displayTweets = function() {
           while(index < streams.home.length){
             var tweet = streams.home[index];
-            var $tweet = $('<div>@' + tweet.user + ' ' + formatTimestamp(tweet.created_at) + '<br/>' + tweet.message + '</div>');
+            var user = '<div class="username">@' + tweet.user + '</div>';
+            var $tweet = $('<div class="row">' + user + ' ' + formatTimestamp(tweet.created_at) + '<br/>' + tweet.message + '</div>');
             $tweet.prependTo($('.tweets'));
             index += 1;
           }
