Allow user to refresh whole page by clicking logo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <h1 class="logo">Twittler</h1>
+    <a href="index.html">
+      <h1 class="logo">Twittler</h1>
+    </a>
 
     <div class="refresh row">Refresh Tweets</div>
 
