Added click event for username class, displays Hello alert box on click

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
 
         $('.refresh').on('click', displayTweets);
 
+        $('.username').on('click', function() {
+          alert('Hello!');
+        });
+
       });
 
     </script>
