--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         $('.refresh').on('click', displayTweets);
 
-        $('.username').on('click', function() {
+        $('.tweets').on('click', '.username', function() {
           alert('Hello!');
         });
 
