--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     </a>
 
     <div class="refresh row">Refresh Tweets</div>
-    <div class="return row">Return to Main Twittler Feed</div>
+    <a href="index.html">
+      <div class="return row">Return to Main Twittler Feed</div>
+    </a>
 
     <section class="tweets">
     </section>
